# Tripwire

./: .gitignore  README.md  pyproject.toml  tw.cmd  tw.ps1
docs/: anti_patterns.md  architecture.md  backend.md  current_phase.md  decisions.md  doctrine_lifecycle.md  economics.md  learning.md  principles.md  roadmap.md
eval/fixtures/: database_too_early.json  doctrine_consistent_cli_change.json  unbounded_ai_call.json  web_dashboard_mvp.json
src/tripwire/: __init__.py  ai.py  cli.py  doctor.py  doctrine.py  evaluation.py  git.py  github.py  grounding.py  heuristics.py  interactive.py  models.py  personas.py  prompt.py  reviewer.py  storage.py  ui.py
supabase/migrations/: 001_tripwire_memory.sql
tests/: test_doctor.py  test_doctrine.py  test_evaluation.py  test_github.py  test_grounding.py  test_heuristics.py  test_interactive.py  test_personas.py  test_prompt.py  test_reviewer.py  test_storage.py  test_ui.py
