[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tripwire-reviewer"
version = "0.1.0"
description = "AI-powered project consistency reviewer for detecting strategic drift in code changes."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tripwire" }]
dependencies = []

[project.scripts]
tripwire = "tripwire.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
